--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,14 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "*",
+        "inertiajs/inertia-laravel": "^2.0",
         "intervention/image": "*",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "spatie/browsershot": "^5.2",
-        "spatie/laravel-permission": "*"
+        "spatie/laravel-permission": "*",
+        "tightenco/ziggy": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
