--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "konva": "^10.0.12",
         "lucide-react": "^0.344.0",
         "react-konva": "^18.2.10",
+        "sonner": "^2.0.7",
         "use-image": "^1.1.4"
     }
 }
