--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "*",
+        "guzzlehttp/guzzle": "^7.10",
         "inertiajs/inertia-laravel": "^2.0",
         "intervention/image": "*",
         "laravel/framework": "^12.0",
@@ -18,6 +19,7 @@
         "laravel/tinker": "^2.10.1",
         "spatie/browsershot": "^5.2",
         "spatie/laravel-permission": "*",
+        "spatie/pdf-to-image": "^1.2",
         "tightenco/ziggy": "^2.6"
     },
     "require-dev": {
